task-1/task2-kubernetes/todo-app-deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployments

spec:
  template:
    metadata:
      name: todo-app-pods
      labels:
        app: todo-app
        tier: react-app
    spec:
      containers:
        - name: todo-app-container
          image: abishekluitel/simplewebapp:v1
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
      tier: react-app
...
