task-1/task2-kubernetes/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  labels:
    app: todo-app
spec:
  type: NodePort
  ports:
  - port: 8010
    targetPort: 8010
    nodePort: 31000
  selector:
    app: todo-app
