task-1/task2-kubernetes/todo-app-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
  - host: "example.com"
    http:
      paths:
       - pathType: Prefix
         path: "/"
         backend:
          service:
            name: todo-app-service
            port:
              number: 8010

  - host: "*.example.com"
    http:
      paths:
       - pathType: Prefix
         path: "/"
         backend:
          service:
            name: todo-app-service
            port:
              number: 8010
...
